--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/ScopoDocumento.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/ScopoDocumento.tex
@@ -6,3 +6,5 @@ Il presente documento ha lo scopo di illustrare le scelte e le strategie che il 
         \item stilare gradualmente un resoconto dei problemi effettivamente affrontati ed un consuntivo relazionato al preventivo;
         \item definire l'organizzazione dei membri all'interno del team per la distribuzione del lavoro e dei rispettivi ruoli.
     \end{itemize}
+
+Questa documentazione verrà continuamente arricchita ed aggiornata con il procedere della realizzazione del prodotto.
