--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -1,61 +1,23 @@
-Nella pianificazione vengono definite in modo più specifico tutte le fasi necessarie alla conclusione del presente progetto, suddividendole ognuna in altrettanti piccoli compiti per garantire così una definizione più immediata, chiara ed agevolata degli obiettivi e permettere di conseguenza ogni volta un carico di lavoro non esageratamente oneroso. \\
-Di seguito viene qui riportata la struttura generale in cui verrà organizzato l'intero lavoro, nel corso del quale si intenderà apporre gli eventuali aggiustamenti del caso e mantenere la documentazione continuamente aggiornata. \\
-Il processo si svilupperà perciò in sette fasi principali. Ogni fase presenta i relativi obiettivi preposti da raggiungere ed, a seconda dei casi, è correlata dai rispettivi incrementi, descritti nel capitolo precedente. La conclusione di alcune delle fasi corrisponde idealmente con gli incontri di revisione obbligatori. 
+Nella pianificazione vengono definiti tutti i passi necessari alla conclusione del presente progetto. \\
+Di seguito viene qui riportata la struttura generale in cui verrà organizzato l'intero lavoro. In questo caso sono state specificate sette fasi e per ognuna di esse sono stati individuati gli obiettivi che il gruppo \Gruppo{} si prefigge di aver raggiunto entro la data di fine della fase stessa. Nel corso delle varie fasi il gruppo non mancherà di restare, ogni qualvolta necessario, in contatto con l'azienda proponente \proponente{}, per poter così chiarire dubbi o accordarsi su eventuali modifiche da poter apportare ad alcuni requisiti.
 
-    \subsection{Fase 1 - Organizzazione preliminare}
-        \begin{itemize}
-            \item scelta degli strumenti ed organizzazione dell'ambiente di lavoro;
-            \item definizione delle Norme di Progetto e Studio di Fattibilità;
-            \item attività di verifica.
-        \end{itemize}
-            
-    \subsection{Fase 2 - Definizione e stesura degli obiettivi di ingresso}
-        \begin{itemize}
-            \item analisi dei requisiti;
-            \item piano di qualifica;
-            \item piano di progetto e organigramma;
-            \item verifica della documentazione per la Revisione dei Requisiti.
-        \end{itemize}
+\subsection{Fase 1 - Organizzazione preliminare}\label{sec:Fase1}
+\input{src/Pianificazione/src/Fase1.tex}
+
+\subsection{Fase 2 - Soddisfacimento requisiti di ingresso}\label{sec:Fase2}
+\input{src/Pianificazione/src/Fase2.tex}
     
-    \subsection{Fase 3 - Consolidamento delle componenti}
-        \begin{itemize}
-            \item attività di correzione;
-            \item individuazione delle funzionalità essenziali e dei componenti principali;
-            \item individuazione delle funzionalità e componenti secondarie;
-            \item strutturazione generale del sistema;
-            \item valutazione delle componenti e tecnologie richieste.
-        \end{itemize}
+\subsection{Fase 3 - Consolidamento delle componenti}\label{sec:Fase3}
+\input{src/Pianificazione/src/Fase3.tex}
     
-    \subsection{Fase 4 - Progettazione e sviluppo}
-        \begin{itemize}
-            \item definizione completa delle strutture tramite diagrammi \glo{UML};
-            \item implementazione delle componenti essenziali individuate;
-            \item progettazione di base delle interfacce utente;
-            \item verifica del codice e delle funzionalità.
-        \end{itemize}
-
-    \subsection{Fase 5 - Sviluppo e rifinitura }
-        \begin{itemize}
-            \item implementazione delle componenti secondarie;
-            \item rifinitura delle componenti e delle interfacce;
-            \item verifica del codice e delle funzionalità;
-            \item verifica della documentazione per la Revisione di Progettazione.
-        \end{itemize}
-
-    \subsection{Fase 6 - Qualifica e testing}
-        \begin{itemize}
-            \item attività di correzione;
-            \item copertura dei test;
-            \item stesura resoconto dei test;
-            \item consuntivo generale;
-            \item controllo complessivo della qualità;
-            \item verifica della documentazione per la Revisione di Qualifica.
-        \end{itemize}
-
-    \subsection{Fase 7 - Validazione e collaudo}
-        \begin{itemize}
-            \item attività di correzione;
-            \item controllo complessivo di ogni parte del prodotto;
-            \item attività di collaudo;
-            \item aggiornamento finale e verifica della documentazione per la Revisione di Accettazione;
-        \end{itemize}
+\subsection{Fase 4 - Progettazione e sviluppo}\label{sec:Fase4}
+\input{src/Pianificazione/src/Fase4.tex}
+    
+\subsection{Fase 5 - Sviluppo e rifinitura }\label{sec:Fase5}
+\input{src/Pianificazione/src/Fase5.tex}
+    
+\subsection{Fase 6 - Qualifica e testing}\label{sec:Fase6}
+\input{src/Pianificazione/src/Fase6.tex}
+    
+\subsection{Fase 7 - Validazione e collaudo}\label{sec:Fase7}
+\input{src/Pianificazione/src/Fase7.tex}
