fix errors graphics
-la parte dei grafici risultanti e quella degli incrementi andrà tolta
-il preventivo si dovrebbe basare sulla nostra esperienza individuale,coesione del gruppo,use case al momento altri fattori non abbiamo per poter mettere delle cifre in modo decente

TODO

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -24,3 +24,5 @@ Prof. Riccardo Cardin \newline
 \newcommand{\EM}{Elvis Murtezan}
 \newcommand{\FP}{Filippo Pinton}
 \newcommand{\GG}{Giovanni Grigoletto}
+
+\newcommand{\ColonnaIstogramma}[7]{(Abdelwahad, #1) (Alessio, #2) (Andrea, #3) (Edoardo, #4) (Elvis, #5) (Filippo, #6) (Giovanni, #7)}
