--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
@@ -72,7 +72,7 @@ Verificatore   &  x & x \\
 Nel seguente areogramma viene rappresentata la distribuzione dei costi in percentuale sulla spesa totale da affrontare:
 \begin{center}
 	\begin{tikzpicture}
-		\pie[rotate = 180, color={blue, yellow, red, green, grigetto, orange}] {
+		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
 			7/Responsabile, % 56/816 circa 7%
 			8/Amministratore, % 69/816 circa 8%
 			5/Analista, % 38/816 circa 5%
