--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -6,14 +6,14 @@
 \usepackage{graphicx}
 \usepackage{graphics}
 \usepackage{pdfpages}
-\usepackage{longtable}
 \usepackage{multirow}
 \usepackage[official]{eurosym}
 \usepackage{hyperref}
 \usepackage{tikz}
-\usepackage{pie}
+\usepackage{pdflscape}
+\usepackage{blindtext}
+\usepackage{pgf-pie}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.17}
 \input{src/Comandi.tex}
 
 \begin{document}
@@ -58,5 +58,4 @@
     \newpage
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
-    
 \end{document}
