--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -5,17 +5,16 @@ Il capitolato in questione si chiama "BlockCOVID: supporto digitale al contrasto
 \subsection{Descrizione del capitolato}
 Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo di questo capitolato riguarda il tracciamento delle postazioni nell'ambito di un laboratorio informatico. In particolare questo progetto richiede la creazione di una piattaforma che sia in grado di gestire e tracciare efficacemente l'utilizzo delle postazoni di lavoro, così come la pulizia delle stesse.
 
-\subsection{Prerequisiti e tecnologie coinvolte}
-Prerequisiti:
+\subsection{Prerequisiti}
 \begin{itemize}
-\item Competenza nello sviluppo di applicazionei mobile;
-\item Competenza nella programmazione e strutturazione di un \glo{server};
-\item Competenza nella costruzione e configurazione di comunicazioni di rete;
-\item Conoscenza adeguata delle tecnologie e librerie proposte;
-\item Conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID};
+\item competenza nello sviluppo di applicazionei mobile;
+\item competenza nella programmazione e strutturazione di applicazioni server-side;
+\item competenza nella costruzione e configurazione di comunicazioni di rete;
+\item conoscenza adeguata delle tecnologie e librerie proposte;
+\item conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID};
 \end{itemize}
 
-Tecnologie coinvolte:
+\subsection{Strumenti e tecnologie coinvolti}
 \begin{itemize}
 \item \glo{RFID}: tecnologia a radiofrequenza per l'identificazione o trasmissione di informazioni;
 \item \glo{Java}, \glo{Python} o \glo{Node.js} per lo sviluppo del server back-end;
@@ -32,20 +31,20 @@ Tecnologie coinvolte:
 \item La tracciatura deve avvenire in tempo reale ed essere memorizzata, immutabile e certificata;
 \item Realizzazione di un server centralizzato, correlato di una \glo{UI} con una procedura di autenticazione ed attraverso il quale deve essere possibile:
 \begin{itemize}
-\item Gestire più stanze, postazioni, personale ed utenti: creare, modificare, eliminare;
+\item Gestire più stanze, postazioni, personale ed utenti, con possibilità di creare, modificare ed eliminare;
 \item Sapere in ogni momento se la stanza o postazione è occupata, prenotata, da pulire o pulita (la visualizzazione deve seguire uno schema che mostri la stanza con le postazioni di diverso colore a seconda del relativo stato);
 \item Monitorare il numero di dipendenti presenti in tutte le postazioni e nella stanza nel suo complesso;
 \item Bloccare le prenotazioni per una determinata stanza;
 \item Prenotare una postazione con granularità di 1 ora;
 \item Effettuare ricerche sugli accessi e sulle postazioni occupate da uno specifico dipendente.
 \end{itemize}
-\item Sviluppo di un'applicazione mobile per dispositivi con sistema \glo{Android} oppure \glo{iOS} che deve permettere:
+\item Sviluppare un'applicazione mobile per dispositivi con sistema \glo{Android} oppure \glo{iOS} che deve permettere di:
 \begin{itemize}
-\item Recupero lista delle postazioni libere e acceso alle informazioni delle stesse;
-\item Prenotazione di una postazione ;
+\item Recuperare una lista delle postazioni libere e acceso alle informazioni delle stesse;
+\item Prenotare una postazione;
 \item Segnalare la propria presenza in tempo reale (nella postazione, appoggiando il telefono sul tag \glo{RFID}), così come la pulizia di una postazione o dell'intera stanza;
-\item Ricevere  un  elenco  delle  stanze  che  necessitano l’igienizzazione
-\item Storico delle postazioni occupate e igienizzate;
+\item Ricevere  un  elenco  delle  stanze  che  necessitano l’igienizzazione;
+\item Recuperare uno storico delle postazioni occupate e igienizzate;
 \end{itemize}
 \item Le autorizzazioni di accesso si devono distinguere in due macro-tipologie di soggetti: Amministratore di sistema (ha accesso al server) e Utente, il quale può essere l'utilizzatore della postazione o l'addetto alla pulizia (anche l'utilizzatore può pulire la postazione con un apposito kit);
 \item Poichè il lettore \glo{RFID} consuma molta batteria al dispositivo è richiesto di trovare il tempo sufficiente a garantire il giusto bilanciamento tra consumo batteria e scansioni, il tutto con test e report delle scelte fatte;
@@ -64,21 +63,21 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 
 \subsection{Aspetti positivi}
 \begin{itemize}
-\item Le tecnologie coinvolte sono nuove e stimolanti ed offrono diversi sbocchi in ambito professionale;
+\item Le tecnologie coinvolte sono nuove e stimolanti ed inoltre la loro conoscenza offre diverse opportunità in ambito professionale;
 \item Alcune soluzioni suggerite offrono un interessante grado di sfida;
-\item L'azienda è stata piuttosto chiara e precisa sugli obbiettivi ed i vincoli del progetto;
+\item L'azienda è stata piuttosto chiara e precisa sugli obiettivi ed i vincoli del progetto;
 \item Il proponente offre consulenza e supporto tecnico per la realizzazione;
-\item Il contrasto della pandemia è un tema d'importanza rilevante in questo periodo;
+\item Il contrasto della diffusione della pandemia è un tema d'importanza rilevante in questo periodo;
 \item Molti membri del gruppo si sono dimostrati incuriositi da questo capitolato;
 
 \end{itemize}
 
 \subsection{Aspetti critici}
 \begin{itemize}
-\item Seppur accattivanti le tecnologie coinvolte sono molte ed anche relativamente recenti e complesse: richiederanno con molta probabilità una notevole quantità di ore da dedicare al loro studio ed apprendimento;
-\item Il discreto grado di sfida proposto può risultare tuttavia ostico e tradursi anche in questo caso in maggior tempo impiegato per la realizzazione del progetto;
-\item Il capitolato ha smosso l'interesse di molti gruppi partecipanti, potrebbe quindi essere difficile aggiudicarsi l'appalto;
+\item Seppur accattivanti le tecnologie coinvolte sono molte ed anche relativamente recenti e complesse: richiedono tempo per lo studio ed apprendimento;
+\item Il grado di sfida proposto è discretamente alto;
+\item Il capitolato ha suscitato l'interesse di molti gruppi partecipanti, potrebbe quindi essere difficile aggiudicarsi l'appalto;
 \end{itemize}
 
 \subsection{Conclusioni}
-Questo capitolato ha attirato subito l'attenzione di molti membri del gruppo. Seppure non di semplice svolgimento, le tecnologie che coinvolge sono stimolanti e di grande interesse perchè molto usate al giorno d'oggi ed offrono un bagaglio di conoscenze molto utili ed apprezzate nel campo professionale. Pertanto questo progetto è stato selezionato come prima scelta da parte del gruppo.
+Questo capitolato ha attirato subito l'attenzione di molti membri del gruppo. Seppure non di semplice svolgimento, le tecnologie che coinvolge sono stimolanti e di grande interesse perchè molto usate al giorno d'oggi ed offrono un bagaglio di conoscenze molto utili ed apprezzate in campo professionale. Pertanto questo progetto è stato selezionato come prima scelta da parte del gruppo.
