--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -6,15 +6,14 @@ Il capitolato in questione si chiama "HD Viz: visualizzazione di dati multidimen
 Il progetto richiede di creare una piattaforma web in grado di fornire diversi tipi di visualizzazioni grafiche di un gran numero di dati con molte dimensioni, a supporto della fase esplorativa di questi e della loro analisi. 
 L’azienda proponente è particolarmente interessata a verificare la fattibilità di questo obbiettivo attraverso le tecnologie web.
 
-\subsection{Prerequisiti e tecnologie coinvolte}
-Prerequisiti:
+\subsection{Prerequisiti}
 \begin{itemize}
 \item Studio delle librerie suggerite;
 \item Organizzazione ed utilizzo di database;
 \item Approfondimento delle principali tecnologie web.
 \end{itemize}
 
-Tecnologie coinvolte:
+\subsection{Strumenti e tecnologie coinvolte}
 \begin{itemize}
 \item \glo{D3.js}: libreria javascript per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati;
 \item \glo{Node.js} oppure \glo{Apache Tomcat}: sviluppo del server \glo{back-end};
