--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -49,8 +49,8 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 \subsection{Aspetti positivi}
 \begin{itemize}
 \item Buone competenze in \glo{data science} sono al giorno d’oggi molto utili e richieste in ambito professionale;
-\item Arricchimento del bagaglio di conoscenze riguardo le tecnologie web e server;
-\item Il proponente è piuttosto competente e professionale, ha inoltre esposto in modo chiaro i vari vincoli ed i casi d'uso presenti nel capitolato.
+\item Arricchimento del bagaglio di conoscenze riguardo le tecnologie web e server-side;
+\item Il proponente ha esposto in modo chiaro e professionale i vari vincoli ed i casi d'uso presenti nel capitolato.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
