--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -59,4 +59,4 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 \item Il capitolato, nel complesso, non ha riscosso particolare interesse da parte del gruppo.
 \end{itemize}
 \subsection{Conclusioni}
-Seppur abbia degli indubbi aspetti positivi, il capitolato fin da subito non ha attirato l'interesse nella quasi totalità dei membri del team. Pertanto fin da subito non è stato preso particolarmente in considerazione.
+Seppur abbia degli indubbi aspetti positivi, il capitolato fin da subito non ha attirato l'interesse nella quasi totalità dei membri del team. Pertanto non è stato preso particolarmente in considerazione.
