fatte alcune correzioni minori

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -7,12 +7,13 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{
+\proponente{} \newline
 Prof. Tullio Vardanega \newline
 Prof. Riccardo Cardin \newline
-\proponente{} \newline Gruppo \Gruppo{}}
+Gruppo \Gruppo{}}
 
 \newcommand{\Uso}{Esterno}
 
