--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/SceltaModello.tex
@@ -1,2 +1,1 @@
-Il gruppo \Gruppo{} ha deciso di pianificare il lavoro seguendo un modello di tipo \textbf {\glo{incrementale}}. \\
-Il modello incrementale si prepone di iniziare la costruzione del prodotto dalle sue funzionalità più importanti ed imprescindibili, e procedere quindi a rilasci successivi per mezzo di incrementi. Questo permette di avere ad ogni rilascio un prodotto sempre funzionante, fino al raggiungimento di tutti i requisiti richiesti.
+Il gruppo \Gruppo{} ha deciso di pianificare il lavoro seguendo un modello di tipo \textbf {\glo{incrementale}}. Questo modello si prepone di iniziare la costruzione del prodotto dalle sue funzionalità più importanti ed imprescindibili, e procedere quindi a rilasci successivi per mezzo di incrementi. Ciò permette di avere ad ogni rilascio un prodotto sempre funzionante, fino al raggiungimento di tutti i requisiti richiesti.
