--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase7.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase7.tex
@@ -19,6 +19,7 @@ La fase finale prevede il controllo e la rifinitura generale di tutto il lavoro.
             \item aggiunta e/o finalizzazione degli aspetti rimasti in sospeso o eventualmente incompleti dalle fasi precedenti;
             \item verifica finale del codice e delle funzionalità del prodotto;
             \item controllo complessivo di ogni parte e collaudo interno del prodotto;
+            \item unificazione dei consuntivi di periodo nella creazione di un consuntivo generale;
             \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
             \item consegna di tutto il materiale necessario, in vista dell'incontro con il committente per la Revisione di Accettazione.
         \end{itemize}
