--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -13,8 +13,22 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        X.X.X  & 
+        XXXX-XX-XX  & 
+        Responsabile & 
+        TODO & 
+        \responsabile{} \\
+
+        X.X.X  & 
+        XXXX-XX-XX & 
+        Verifica & 
+        TODO & 
+        \verificatore{} \\
+        
+        1.0.0  & 
+        2021-01-05 & 
+        Stesura documento & 
+        Giovanni Grigoletto \newline Elvis Murtezan  & 
+        \redattore{} \\
     \end{longtable}
 }
