--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -6,6 +6,7 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{charter}
 
 \usepackage{tabularx} 
 \usepackage{booktabs} % permette di poter usare delle liste nelle tabelle
@@ -124,7 +125,7 @@
 
 % variabili - altro
 
-\newcommand{\Mail}{TODO}
+\newcommand{\Mail}{swegroup11@gmail.com}
 \newcommand{\proponente}{Imola Informatica}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
@@ -186,7 +187,7 @@
 			\vspace{9pt}  
 			
 			\begin{large}
-				\textbf{Gruppo \Gruppo{}\ - Progetto \NomeProgetto{}}
+				\textbf{Gruppo \Gruppo{}\ - Progetto \NomeProgetto{}} \\
 				\vspace{6pt}
 				\Mail{}
 			\end{large}	  
