--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Scadenze.tex
@@ -1,7 +1,7 @@
 Il gruppo \Gruppo{} intende realizzare il progetto \NomeProgetto{} rispettando le seguenti principali \glo{milestone}:
 \begin{itemize}
-    \item \textbf{Revisione dei Requisiti}: 2020-01-11;
-    \item \textbf{Revisione di Progettazione}: 2020-03-08;
-    \item \textbf{Revisione di Qualifica}: 2020-04-09;
-    \item \textbf{Revisione di Accettazione}: 2020-05-10.
+    \item \textbf{Revisione dei Requisiti}: 11 gennaio 2021;
+    \item \textbf{Revisione di Progettazione}: 1 marzo 2021;
+    \item \textbf{Revisione di Qualifica}: 2 aprile 2021;
+    \item \textbf{Revisione di Accettazione}: 3 maggio 2021.
 \end{itemize}
