--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -4,6 +4,7 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         \renewcommand{\arraystretch}{1.5}
         
         \begin{longtable}{|p{1cm}|p{3cm}|p{1cm}|p{1cm}|p{3cm}|p{3cm}|}
+        \caption{Tabella dei rischi}\\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Cod.}} & 
         \textcolor{\secondaryColor}{\textbf{Descrizione}} & 
