--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase2.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase2.tex
@@ -1,4 +1,4 @@
-Svolte le attività preliminari, il gruppo si concentra più in dettaglio nel capitolato scelto e redige una prima stesura della documentazione esterna, preparandosi conformemente a quanto richiesto dal primo incontro di revisione programmato.
+Svolte le attività preliminari, il gruppo si concentra più in dettaglio nell'analisi del capitolato scelto e redige una prima stesura della documentazione esterna. L'obiettivo principale di questa fase è ottenere quindi il \glo{deliverable} richiesto per il primo incontro di revisione programmato. Questa fase corrisponde alla prima \glo{milestone} ufficiale del gruppo.
         
         \subsubsection{Periodo di svolgimento}
         4 dicembre 2020 - 11 gennaio 2021;
