--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase4.tex
@@ -1,4 +1,4 @@
-Da qui in poi si entra nelle fasi più pratiche di costruzione del sisema. In questa fase ci sarà una progettazione più approfondita ed una prima stesura del codice con lo scopo di mettere insieme un primo prototipo funzionante del prodotto, avente le minime funzionalità essenziali e basilari. Si ricorda che secondo i modello scelto lo sviluppo in generale avverrà in modo incrementale, perciò, oltre ad una preventiva organizzazione delle parti, si procederà sempre all'implementazione per aggiunte e/o modifiche successive, secondo gli incrementi stabiliti, cercando ogni volta di garantire un sistema funzionante.
+Da qui in poi si entra nelle fasi più pratiche di costruzione del sisema. In questa fase ci sarà una progettazione più approfondita ed una prima stesura del codice con lo scopo di mettere insieme un primo prototipo funzionante del prodotto, avente le minime funzionalità essenziali e basilari. 
         
         \subsubsection{Periodo di svolgimento}
         28 gennaio 2021 - 14 febbraio 2021;
