--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase6.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase6.tex
@@ -1,4 +1,4 @@
-A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. In questa fase l'obiettivo è ultimare la parte di implementazione per poi concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da avere tutto il necessario conformemente a quanto richiesto dal terzo incontro di revisione programmato.
+A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questa fase è la terza \glo{milestone} principale del progetto; il suo obiettivo di fondo è ultimare la parte di implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         8 marzo 2021 - 2 aprile 2021;
