--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -1,5 +1,6 @@
 Nella pianificazione vengono definiti tutti i passi necessari alla conclusione del presente progetto. \\
-Di seguito viene qui riportata la struttura generale in cui verrà organizzato l'intero lavoro. In questo caso sono state specificate sette fasi e per ognuna di esse sono stati individuati gli obiettivi che il gruppo \Gruppo{} si prefigge di aver raggiunto entro la data di fine della fase stessa. Nel corso delle varie fasi il gruppo non mancherà di restare, ogni qualvolta necessario, in contatto con l'azienda proponente \proponente{}, per poter così chiarire dubbi o accordarsi su eventuali modifiche da poter apportare ad alcuni requisiti.
+Di seguito viene qui riportata la struttura generale in cui verrà organizzato l'intero lavoro. In questo caso sono state specificate sette fasi e per ognuna di esse sono stati individuati gli obiettivi che il gruppo \Gruppo{} si prefigge di aver raggiunto entro la data di fine della fase stessa. Nel corso delle varie fasi il gruppo non mancherà di restare, ogni qualvolta necessario, in contatto con l'azienda proponente \proponente{}, per poter così chiarire dubbi o accordarsi su eventuali modifiche da poter apportare ad alcuni requisiti.\\
+Si ricorda inoltre che secondo i modello scelto, lo sviluppo in generale avverrà in modo incrementale, perciò, oltre ad una preventiva organizzazione delle parti, si procederà sempre all'implementazione per aggiunte e/o modifiche successive, secondo gli incrementi stabiliti e cercando ogni volta di garantire un sistema funzionante.
 
 \subsection{Fase 1 - Organizzazione preliminare}\label{sec:Fase1}
 \input{src/Pianificazione/src/Fase1.tex}
