--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase5.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Fase5.tex
@@ -1,4 +1,4 @@
-In questa seconda fase relativa allo sviluppo del codice ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui requisiti di tipo prestazionale. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto, preparandosi conformemente a quanto richiesto dal secondo incontro di revisione programmato.
+Questa ulteriore fase relativa in gran parte allo sviluppo del codice è di fatto la seconda \glo{milestone} principale del gruppo. In essa ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui requisiti di tipo prestazionale. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto, preparando il \glo{deliverable} conformemente a quanto richiesto dal secondo incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         15 febbraio - 1 marzo 2021;
