--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -76,7 +76,7 @@ dove:
 Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi UML}
-Ogni diagramma UML inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi UML sarà StarUML o, in alternativa, DrawIO.
+Ogni diagramma UML inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi UML sarà StarUML o, in alternativa, Draw.IO.
 
 
 
